# rag-service

./: .env.example  .gitignore  __init__.py  deploy.sh  env_loader.py  mortgage_chat.py  pyproject.toml  rag_search_tool.py  rag_service.db  requirements.txt  start_server.sh  start_worker.sh  web_search_tool.py
agent/: requirements.txt  test_questions.txt  user_info_collector.py  utils.py
app/: config.py  constants.py  database.py  main.py  schemas.py  storage.py  worker.py
domain/: __init__.py
examples/: debug_unit_exists.py  e2e_workflow.py  query_with_filters.py  test_datasets.py  test_documents.py  test_fannie_mae_queries.py  test_query.py  test_tasks.py  test_units.py
rag/: check_qdrant.py  dump.py  extract_pdf_pages.py  highlight.py  import.py  mortgage_document_processor.py  mortgage_rag_pipeline.py  prepare_manifest.py  query.py  query_simple_example.py  recover.py  run_mortgage_pipeline.py  server.py  validate_conversion.py
scripts/: bench_qps.py  client.py  deploy.sh  export_dependencies.py  infra.sh  migrate_qdrant_to_meili.py  qdrant_config.yaml  retry_failed_tasks.py  rqlite_shell.py  start_chroma.bat  start_meilisearch.bat  start_milvus.sh  start_qdrant.bat  start_qdrant.ps1  start_server.ps1  start_server.sh  start_worker.ps1  start_worker.sh  validate_api.py  verify_readers.py
static/: index.html
tests/: conftest.py  test_dataset_api.py  test_datasets.py  test_document_task_api.py  test_documents.py  test_health.py  test_qdrant_connection.py  test_query_api.py  test_query_fulltext.py  test_query_fusion.py  test_query_vector.py  test_tasks.py  test_units.py  test_units_api.py  test_zag_retriever.py
worker/: config.py  constants.py  (+8 more)
(+46 files in other folders)
