[project]
name = "rag-service"
version = "0.1.0"
description = "RAG service layer built on top of Zag framework"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.3.6",
    "cohere>=5.20.2",
    "cachetools>=6.2.5",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=21.2.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "nanoid>=2.0.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "PyPDF2>=3.0.0",
    "rich>=13.0.0",
    "chakpy>=0.1.0",
    "mineru[all]>=2.7.6",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "worker*", "domain*"]
